--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,3 +13,8 @@
     %main{:role => "main"}
       = render 'layouts/messages'
       = yield
+    %nav.navbar.navbar-default.navbar-fixed-bottom
+      .container
+        %ul.nav.navbar-nav
+          %li 
+            %a Copyright 2016 Tomás Herrera
